perf-regression: remove workaround and final fix Java 17 issue #4031